deploy/yc-sirius/edu-focused-lamarr/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django
  namespace: edu-anastasia-avakova
spec:
  containers:
    - name: django
      image: nastiaetstesha/django-site:65d43e5
      ports:
        - containerPort: 80
      volumeMounts:
        - name: ssl-cert-volume
          mountPath: /root/.postgresql/root.crt
          subPath: root.crt
          readOnly: true
  volumes:
    - name: ssl-cert-volume
      secret:
        secretName: psql-ssl-cert
        defaultMode: 0600
