deploy/yc-sirius/edu-focused-lamarr/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx 
  namespace: edu-anastasia-avakova
  labels:
    app: nginx

spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
