deploy/yc-sirius/edu-focused-lamarr/psql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-test
  namespace: edu-anastasia-avakova
spec:
  containers:
    - name: psql
      image: ubuntu:22.04
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: ssl-cert-volume
          mountPath: /root/.postgresql/root.crt
          subPath: root.crt
          readOnly: true
  volumes:
    - name: ssl-cert-volume
      secret:
        secretName: psql-ssl-cert
        defaultMode: 0600
