deploy/yc-sirius/edu-focused-lamarr/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-anastasia-avakova
spec:
  selector:
    name: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
